# hFEMs

./: .gitignore  LICENSE
cpptest/: CMakeLists.txt  exec.py  main.cpp
meshes/: testmesh.veg
notebooks/: hexfemnew.ipynb  test_module.ipynb
notebooks/.ipynb_checkpoints/: test_module-checkpoint.ipynb
python/: .gitignore  CMakeLists.txt  setup.py
python/hFEMs/: __init__.py
python/src/: bindings.cpp
src/: EigenDefinitions.h  EigenDefinitions.hpp  Expansion.cpp  Expansion.hpp  NewtonSolver.cpp  NewtonSolver.hpp  Solvable.hpp  TestSolvable.hpp  VegaFEMSolvable.cpp  VegaFEMSolvable.hpp
src/debug/: debug_tools.cpp  debug_tools.hpp
